add link to heroku to readme

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/BelarusWillBeFree/frontend-project-lvl4.git"
   },
-  "author": "",
+  "author": "Anatoly Muzyka",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/BelarusWillBeFree/frontend-project-lvl4/issues"
