--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/BelarusWillBeFree/frontend-project-lvl4#readme",
   "dependencies": {
-    "@hexlet/chat-server": "^1.1.3"
+    "@hexlet/chat-server": "^1.1.3",
+    "immer": "^9.0.15",
+    "use-immer": "^0.7.0"
   }
 }
