--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,22 +2,28 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "main": "./src/index.js",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "@rollbar/react": "^0.11.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "i18next": "^21.9.0",
+    "leo-profanity": "^1.5.1",
     "normalizer": "^1.2.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4",
