--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.22.0",
+    "eslint-plugin-react": "^7.30.1",
     "nodemon": "^2.0.19"
   }
 }
