--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "main": "./src/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@rollbar/react": "^0.11.1",
