--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,8 +59,9 @@
   "devDependencies": {
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-functional": "^4.2.2",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.31.0",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1"
   }
